# VerificationLibrary

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: AGCertificateVerifier.cpp  AGCertificateVerifier.h  AGCertificateVerifierStaticData.cpp  AGDataStorage.cpp  AGDataStorage.h  AGHPKPInfo.cpp  AGHPKPInfo.h  AGJsonUtils.h  AGStringUtils.h  AGX509StoreUtils.h
src/mozilla/: .gitattributes  CACertificates.h  CACertificatesUntrusted.h  make_cacerts_custom.sh  mk-ca-header.pl
test/: AGCertificateVerifierTest.cpp  CMakeLists.txt
